@@ -21,22 +21,29 @@
 void
 print_help(char **argv)
 {
-    printf("%s\n", PACKAGE_STRING);
-    printf("Estimate distinct count of values from standard input.\n");
-    printf("Value is considered terminated with a newline.\n\n");
-    printf("Usage: %s [OPTION]...\n", argv[0]);
-    printf("\n");
-    printf("-h, --help            Print this help message.\n");
-    printf("-v, --verbose         Print additional information.\n");
-    printf("-a, --accuracy SIZE   Higher value increases accuracy at\n");
-    printf("                      the cost of memory usage. Must be\n");
-    printf("                      in range of [4, 20]. Default value\n");
-    printf("                      is 20.\n");
-    printf("                      SIZE   Error   Bytes Used\n");
-    printf("                         4   26.0%%           16\n");
-    printf("                        10    3.2%%         1024\n");
-    printf("                        15    0.6%%        32768\n");
-    printf("                        20    0.1%%      1048576\n");
+    fprintf(stdout, "%s\n", PACKAGE_STRING);
+    fprintf(stdout, "Estimate distinct count of values from standard "
+                    "input.\n");
+    fprintf(stdout, "Value is considered terminated with a newline.\n\n");
+    fprintf(stdout, "Usage: %s [OPTION]...\n", argv[0]);
+    fprintf(stdout, "\n");
+    fprintf(stdout, "-h, --help       Print this help message.\n");
+    fprintf(stdout, "-v, --verbose    Print additional information about the "
+                    "data.\n");
+    fprintf(stdout, "                 Error bounds, number of input records, "
+                    "etc.\n");
+}
+
+void
+print_version()
+{
+    fprintf(stdout, "%s\n", PACKAGE_STRING);
+    fprintf(stdout, "Copyright (C) 2018 Harold Freeman\n");
+    fprintf(stdout, "License GPLv3+: GNU GPL version 3 or "
+                    "later <https://gnu.org/licenses/gpl.html>\n");
+    fprintf(stdout, "This is free software: you are free to change and "
+                    "redistribute it.\n");
+    fprintf(stdout, "There is NO WARRANTY, to the extent permitted by law.\n");
 }
 
 bool
@@ -58,39 +65,9 @@ is_flag_present(int argc, char **argv, char *short_flag, char *long_flag)
     return false;
 }
 
-bool
-get_flag_value(int argc, char **argv, char *short_flag,
-               char *long_flag, char *data, size_t size)
-{
-    for(int i = 0; i < argc; i++) {
-        // Skip nulled (already processed) args
-        if (argv[i] == NULL) {
-            continue;
-        }
-        // Check if flag matches
-        if (strcmp(argv[i], short_flag) == 0 ||
-            strcmp(argv[i], long_flag) == 0) {
-            // Check if flag is last argument
-            if ((i + 1) >= argc) {
-                return false;
-            }
-            // Copy flag value
-            strncpy(data, argv[i + 1], size);
-            // Manually null character to be safe
-            data[size - 1] = '\0';
-            // Null out the flag and value for enforcement of unknown flags
-            argv[i] = NULL;
-            argv[i + 1] = NULL;
-            return true;
-        }
-    }
-    return false;
-}
-
 void
 parse_args(int argc, char **argv, struct CLIArgs *cli_args)
 {
-    char cli_buf[CLI_PARAM_SIZE];
     // Default values
     cli_args->accuracy = 20;
     cli_args->verbose = false;
@@ -99,21 +76,14 @@ parse_args(int argc, char **argv, struct CLIArgs *cli_args)
         print_help(argv);
         exit(EXIT_SUCCESS);
     }
-    // Accuracy flag
-    if (get_flag_value(argc, argv, "-a", "--accuracy",
-                       cli_buf, CLI_PARAM_SIZE)) {
-        char* end;
-        cli_args->accuracy = (uint8_t)strtol(cli_buf, &end, 10);
-        if (*end != '\0' || cli_args->accuracy < 4 || cli_args->accuracy > 20) {
-            fprintf(stderr, "Invalid accuracy '%s'. "
-                            "Should be between '4' and '20'.\n\n", cli_buf);
-            print_help(argv);
-            exit(EXIT_FAILURE);
-        }
-    }
     // Verbose flag
     if (is_flag_present(argc, argv, "-v", "--verbose")) {
         cli_args->verbose = true;
+    }
+    // Version flag
+    if (is_flag_present(argc, argv, "--verson", "--version")) {
+        print_version(argv);
+        exit(EXIT_SUCCESS);
     }
     // Check for unknown flags, report to user and fail if found
     int i;
